--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
 <body>
     <div class="logo">
     </div>
-    <div id="container" >
+    <div>
+        <div id="content">
+
+        </div>
+        <div id="container" >
         
+        </div>
     </div>
+    
     <script src="public/js/script.js"></script>
 </body>
 </html>
